test/negative/304_duplicate_record_field.fx
// expect: duplicate record field
type bad_t = {a: int; a: int}
